# prefect-with-k8

./: .gitignore  Dockerfile  README.md  job_template.yaml  setup.cfg
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  serviceaccount.yaml
chart/templates/agent/: deployment.yaml  rbac.yaml
chart/templates/secrets/: coiled.yaml  github.yaml  registry.yaml
requirements/: environment.yml  requirements.txt
src/prefect_kube_demo/: Dockerfile  prepare.sh  tasks.py
src/prefect_kube_demo/flows/: wordcount.py
src/prefect_kube_demo/tests/: test_flows.py
