[metadata]
name = prefect-with-k8
version = 1.0.0
author = Christopher Lo
author_email = lochristopherhy@gmail.com
maintainer = Christopher Lo
maintainer_email = lochristopherhy@gmail.com

description = "Demo of Prefect flow orchestration and Coiled Dask with Kubernetes."
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/topher-lo/prefect-with-k8

[options]
zip_safe = true
include_package_data = True
package_dir =
    = src
packages = find:
python_requires =  ==3.8.10

[options.packages.find]
where=src

[options.extras_require]
dev = 
    pytest
    black

[flake8]
ignore = E501
max-line-length = 96